--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "path": "^0.12.7",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3",
     "spotify-web-api-node": "^5.0.2",
