--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "fs": "^0.0.1-security",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "path": "^0.12.7",
     "pg": "^8.11.5",
+    "process": "^0.11.10",
     "sequelize": "^6.37.3",
     "spotify-web-api-node": "^5.0.2",
     "validator": "^13.11.0"
