--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pg": "^8.11.5",
     "process": "^0.11.10",
     "sequelize": "^6.37.3",
+    "source-map": "^0.7.3",
     "spotify-web-api-node": "^5.0.2",
     "validator": "^13.11.0"
   }
